--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -14,7 +14,7 @@
 	    <%= password_field(:user, :password, :class => "form-control", :id => "order-password", :placeholder => "Password") %>
     <% end %>
     <br>
-	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button", :button_class => "push-btn green"} %>
+	<%= render 'credit_card_form', :locals => { :form_id => "create-account-form", :button_text => "Create Account & Pay For Order", :button_id => "pay-button" } %>
 
 
 </div>
@@ -24,7 +24,7 @@
 	<div class="row-new">
 		<%= text_field(:login, :email, :class=>"form-control", :id => "email", :placeholder => "E-mail Address") %>
 		<%= password_field(:login, :password, :class=>"form-control", :id => "password", :placeholder => "Password") %>
-		<%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+		<%= button_tag(type: 'submit', class: "push-btn green next-step mar-top") do %>
 			Log In 
 		<% end %>
 	</div>
