--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -24,6 +24,6 @@
 
 
 
-        <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay For Order", :button_id => "pay-logged-in-button" }%>
+        <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay & Place Order", :button_id => "pay-logged-in-button" }%>
 
       </div>
