colors on my-gear dropdown

--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -1,6 +1,6 @@
 /* code from http://csswizardry.com/2011/02/creating-a-pure-css-dropdown-menu/ */
 
-$elements: base, phone, menu, topbar, user-settings;
+@import "base/vars";
 
 
 #click_me {
@@ -54,6 +54,7 @@ $elements: base, phone, menu, topbar, user-settings;
 }
 #click_me li:hover ul a { 
   text-decoration:none;
+  color: $black;
 }
 #click_me li:hover ul li a:hover { 
   background:#555;
