--- a/app/views/charges/_create_account_login.html.erb
+++ b/app/views/charges/_create_account_login.html.erb
@@ -24,7 +24,7 @@
 	<div class="row-new">
 		<%= text_field(:login, :email, :class=>"form-control", :id => "email", :placeholder => "E-mail Address") %>
 		<%= password_field(:login, :password, :class=>"form-control", :id => "password", :placeholder => "Password") %>
-		<%= button_tag(type: 'submit', class: "push-btn green next-step mar-top") do %>
+		<%= button_tag(type: 'submit', class: "push-btn darkslategray next-step mar-top") do %>
 			Log In 
 		<% end %>
 	</div>
