--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -122,7 +122,7 @@
 
   <div class="actions">
   <% if @owner.is_open? %>
-    <%= button_tag(type: 'submit', id:"order-submit", class: "push-btn green next-step") do %>
+    <%= button_tag(type: 'submit', id:"order-submit", class: "push-btn darkslategray next-step") do %>
       <i class="fa fa-cutlery pad-right-sml"></i> Next
     <% end %>
   <% else %> 
