--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -115,21 +115,21 @@
 
 	<tr>
 		<td> <%= f.label :modifiers %></td>
-		<td>
-			<button type="button" id="size_mod_btn" data-mod-type="size">Add a size option to item</button>
+		<td class="add-mod-btns">
+			<button class="action-btn" type="button" id="size_mod_btn" data-mod-type="size">Add a size option to item</button>
 			<%= render 'new_item_size' %>
 
-			<button type="button" id="single_select_mod_btn" data-mod-type="single">Add a single select option to item</button>
+			<button class="action-btn" type="button" id="single_select_mod_btn" data-mod-type="single">Add a single select option to item</button>
 			<%= render 'new_item_single_select' %>
 
-			<button type="button" id="multiple_select_mod_btn" data-mod-type="multiple">Add a multi select option to item</button>
+			<button class="action-btn" type="button" id="multiple_select_mod_btn" data-mod-type="multiple">Add a multi select option to item</button>
 			<%= render 'new_item_multiple_select' %>
 
-			<button type="button" id="mod_btn" data-mod-type="custom" disabled="disabled">Add a custom option to item</button>
+			<button class="action-btn" type="button" id="mod_btn" data-mod-type="custom" disabled="disabled">Add a custom option to item</button>
 
 			</td>
 		</tr>
-		<tr colspan="3"> <td> <%= f.submit 'Ceate new item', :class=>"green" %></td> </tr>
+		<tr colspan="3"> <td> <%= f.submit 'Ceate new item', :class=>"push-btn darkslategray" %></td> </tr>
 		<% end %>
 	</table>
 
@@ -149,7 +149,7 @@
 			</tr>
 			<tr>
 				<td colspan="2"> 
-					<%= submit_tag %>
+					<%= submit_tag nil, class: "push-btn darkslategray" %>
 				</td>
 			</tr>
 
