--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -90,6 +90,49 @@
     <textarea>Text Area</textarea>
     <input type="textfield" />
 
+    <hr>
+    <span>class="input-list"</span>
+    <p>Add this div to a container to mimic these results. Will strech to fill the parent.</p>
+    <hr>
+
+    <div class="input-list">
+        <h2>Filter by</h2>
+
+        <label>Resource:</label>
+        <select id="filter1" name="Filter 1"></select>
+
+        <label>Something with info help:</label>
+        <input type="text" class="with-info" />
+        <span class="fa fa-info-circle"></span>
+
+        <label>Basic:</label>
+        <input type="text" placeholder="Fill me in!"/>
+
+        <label>
+          <input type="checkbox">
+          Input before Checkbox
+        </label>
+
+        <label>
+          Or after works fine
+          <input type="checkbox">
+        </label>
+
+        <label>Textarea:</label>
+        <textarea>Lorem Ipsum</textarea>
+
+        <label>
+          <input type="radio" name="frontendftw">
+          Option 1
+        </label>
+
+        <label>
+          <input type="radio" name="frontendftw">
+          Option 2
+        </label>
+
+      </div>
+
     <ul>
       <li>One</li>
       <li>Two</li>
