--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -1,4 +1,32 @@
+.input-list {
+  label { 
+    color: #555; 
+    display: block; 
+  }
 
+  select,
+  input[type=text],
+  textarea {
+    margin-bottom: 8px;
+    margin-left: 2px;
+    width: calc(100% - 2px);
+
+    &.with-info {
+      width: calc(100% - 50px);
+    }
+  }
+
+  label input[type=checkbox],
+  label input[type=radio] {
+    display: inline-block;
+    //vertical-align: middle;
+    margin-left: 2px;
+    margin-bottom: 8px;
+  }
+}
+
+
+/* old code */
 input[type="radio"].modifier, input[type="checkbox"].modifier {
   opacity: 0;
   position:absolute;
