darkslate gray buttons

--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -55,6 +55,8 @@
     <button class="action-btn brown">Action Button</button>
     <button class="action-btn green">Action Button</button>
     <button class="action-btn blue">Action Button</button>
+    <button class="action-btn darkslategray">Action Button</button>
+
 
     <br>
 
@@ -63,6 +65,8 @@
     <a href="#" class="action-btn brown">Action Anchor</a>
     <a href="#" class="action-btn green">Action Anchor</a>
     <a href="#" class="action-btn blue">Action Anchor</a>
+    <a href="#" class="action-btn darkslategray">Push Anchor</a>
+
 
     <hr>
     <span>Buttons/Anchors with class push-btn</span>
@@ -73,6 +77,8 @@
     <button class="push-btn green">Push Button</button>
     <button class="push-btn blue">Push Button</button>
     <button class="push-btn brown">Push Button</button>
+    <button class="push-btn darkslategray">Push Button</button>
+
 
     <br>
 
@@ -81,6 +87,8 @@
     <a href="#" class="push-btn green">Push Anchor</a>
     <a href="#" class="push-btn blue">Push Anchor</a>
     <a href="#" class="push-btn brown">Push Anchor</a>
+    <a href="#" class="push-btn darkslategray">Push Anchor</a>
+
 
     <hr>
     <span>Generic text inputs</span>
