users signin and signup plus form errors

--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -15,7 +15,7 @@
 .pad-top-sml { padding-top: 10px; } 
 .pad-bottom-sml { padding-bottom: 10px; } 
 
-.pad-bottom { padding-right: 20px; } 
+.pad-right { padding-right: 20px; } 
 .pad-left { padding-left: 20px; } 
 .pad-top { padding-top: 20px; } 
 .pad-bottom { padding-bottom: 20px; } 
@@ -34,7 +34,7 @@
 .mar-top-sml { margin-top: 10px; } 
 .mar-bottom-sml { margin-bottom: 10px; } 
 
-.mar-bottom { margin-right: 20px; } 
+.mar-right { margin-right: 20px; } 
 .mar-left { margin-left: 20px; } 
 .mar-top { margin-top: 20px; } 
 .mar-bottom { margin-bottom: 20px; } 
