--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -18,8 +18,9 @@ small { color: #666; }
 ol li { display: inline-block; } //why not
 p { font-size: 22px; }
 
-/* body {
-  background-image: image-url('noise-bg-2.png');
-  background-repeat: repeat;
-} */
+ body {
+  // background-image: image-url('noise-bg-2.png');
+  // background-repeat: repeat;
+  //background-color:dimgray;
+} 
 
