--- a/app/assets/stylesheets/charges.css
+++ b/app/assets/stylesheets/charges.css
@@ -10,3 +10,15 @@ input[type=radio], input.radio { float:left; clear:none; margin: 2px 0 0 2px; wi
 
 .choose-account-option > .alpha { border-top-left-radius: 5px 5px; border-bottom-left-radius: 5px 5px;}
 .choose-account-option > .beta { border-top-right-radius: 5px 5px; border-bottom-right-radius: 5px 5px;}
+
+input[type=checkbox]:checked + .charges-shnack-credit:before {
+  color: green;
+  font-style: italic;
+  content: 'Yes, apply my credit';
+}
+
+input[type=checkbox] + .charges-shnack-credit:before {
+  color: brown;
+  font-style: italic;
+  content: 'No, do not apply credit';
+}
