--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -55,8 +55,8 @@
 }
 
 .panel-title {
-  font-weight:500;
-  color: #333;
+  font-weight: 800;
+  color: $white;
   cursor: pointer;
   //background-color: #A10;
 
@@ -75,7 +75,7 @@
 }
 
 .panel-default > .panel-heading {
-  background-color: khaki;
+  background-color: $red;
   cursor: pointer;
   border-radius: 0px;
 }
