--- a/app/assets/stylesheets/components/buttons.css.scss
+++ b/app/assets/stylesheets/components/buttons.css.scss
@@ -23,6 +23,10 @@
   border-radius: 3px;
   top: 0px;
   box-shadow: 0 3px 0 #333;
+  margin-right: 3px;
+  margin-left: 3px;
+  width: calc(100% - 6px);
+
 
   &:hover {
     top: 1px;
@@ -35,12 +39,12 @@
   }
 }
 
-/* used for the menu flow */
+/* used for the menu flow 
 .next-step {
   //min-width: 50%;
   float: right;
   margin-right: 10px;
-}
+}*/
 
 /* manage vendors add items page */
 .add-mod-btns > .action-btn {
