--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,9 @@
-<div class="input-list" style="max-width:350px;">
-  <h4 class="SSS">Sign up</h4>
+<% content_for :page_title do%>
+Sign Up
+<% end %>
+
+
+<div class="input-list center" style="max-width:350px;">
 
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
