--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -122,11 +122,11 @@
 
   <div class="actions">
   <% if @owner.is_open? %>
-    <%= button_tag(type: 'submit', id:"order-submit", class: "push-btn darkslategray next-step") do %>
+    <%= button_tag(type: 'submit', id:"order-submit", class: "push-btn darkslategray mar-bottom") do %>
       <i class="fa fa-cutlery pad-right-sml"></i> Next
     <% end %>
   <% else %> 
-    <%= button_tag(type: 'submit', id:"order-submit",  class: "push-btn next-step", :disabled => true) do %>
+    <%= button_tag(type: 'submit', id:"order-submit",  class: "push-btn", :disabled => true) do %>
       <i class="fa fa-frown-o pad-right-sml"></i> Currently Closed
     <% end %>
   </div>
