that credit card form wierdness

--- a/app/views/charges/_logged_in_payment.html.erb
+++ b/app/views/charges/_logged_in_payment.html.erb
@@ -33,7 +33,7 @@
     <%end%>
   <%end%>
 
-  <div class="wrapper" style="display:block;">
+  <div>
     <%= render 'credit_card_form', :locals => { :form_id => "select-card-form", :button_text => "Pay & Place Order", :button_id => "pay-logged-in-button" }%>
   </div>
 
