--- a/app/views/charges/_credit_card_form.html.erb
+++ b/app/views/charges/_credit_card_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag "#", :id => "credit-card-form", :"data-form"=> locals[:form_id]   do %>
-    <div class="new-card-form input-list">
+    <div class="new-card-form input-list wrapper">
       <div class="row-new">
         <%= text_field_tag :credit_card_number, nil, :class => "form-control", :placeholder => "Credit Card Number", class: "column twelve" %> 
       </div>
