front-page limited time

--- a/app/assets/stylesheets/base/colors.css.scss
+++ b/app/assets/stylesheets/base/colors.css.scss
@@ -103,3 +103,8 @@ button.darkslategray:active { background-color: lighten(darkslategray, 15%); }
   width: 100%;
   background-color: $brown;
 }
+
+.wrapper-khaki {
+  width: 100%;
+  background-color: khaki;
+}
