--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,61 +81,53 @@
 			
 
 		<div id="order-form" class="the-menu">
-
-	<!--    <div class="row-new">
-	      <div class="panel-heading"><h3>FOODOOD</h3></div>
-	    </div>
-
-	     <div class="row-new">
-	      <div class="item-name col-3">Cheese Pizza</div>
-	      <div class="item-price col-2">$00.00</div>
-	      <div class="cart-add col-1">+</div>
-	      <div class="cart-total col-1">0</div>
-	      <div class="cart-minus col-1">-</div>
-	    	<div class="item-desc col-4">This is a simple discription of a CP, do you know what this is.</div>
-	    </div>
- 		</div> -->
-
-
 			<%= yield %>
 		</div>
-				
-	</div>
 
-	<section class="wrapper-darkslategray">
-		<div class="row-new pad-y-sml easy-123">
-			<div class="column-mobile four">
-				<h1>Select your location</h1>
-				<span class="i-location i-easy-123"></span>
-				<p>Order food from your current spot on your phone or laptop</p>
+		<section class="wrapper-khaki text-center pad">
+			<div class="my-container-half">
+				<h4 class="SSS bold">Limited time offer</h4>
+				<p class="pad-bottom">Sign up today and get $5 in Shnack Credit</p>
+				<a href='/users/sign_up' class="push-btn brown">Sign me up</a>
 			</div>
-			<div class="column-mobile four">
-				<h1>Order & Pay</h1>
-				<span class="i-pay i-easy-123"></span>
-				<p>Pay in app and be noitified via text when your food is ready</p>
+		</section>
+
+		<section class="wrapper-darkslategray">
+			<div class="row-new pad-y-sml easy-123">
+				<div class="column-mobile four">
+					<h1>Select your Location</h1>
+					<span class="i-location i-easy-123"></span>
+					<p>Order food from your current spot on your phone or laptop</p>
+				</div>
+				<div class="column-mobile four">
+					<h1>Order & Pay</h1>
+					<span class="i-pay i-easy-123"></span>
+					<p>Pay in app and be noitified via text when your food is ready</p>
+				</div>
+				<div class="column-mobile four">
+					<h1>Relax until Pick Up</h1>
+					<span class="i-pickup i-easy-123"></span>
+					<p>Sit back, skip the line, & pickup your food</p>
+				</div>
 			</div>
-			<div class="column-mobile four">
-				<h1>Relax until Pick Up</h1>
-				<span class="i-pickup i-easy-123"></span>
-				<p>Sit back, skip the line, & pickup your food</p>
-			</div>
-		</div>
-	</section>
+		</section>
 
-	<footer class="tell-me-more">
-		<%= link_to('This is all about the Shnack', { :controller => "/application", :action => "howdy"}) %>
-	</footer>
+		<footer class="tell-me-more">
+			<%= link_to('This is all about the Shnack', { :controller => "/application", :action => "howdy"}) %>
+		</footer>
 
-	<footer class="fb">
+		<footer class="fb">
 
-	  <a href="/howdy" class="place-order pad-top pad-lrg-bottom" style="font-size:18px;">Want to start using Shnack?<br>Get in contact</a>
+		  <a href="/howdy" class="place-order pad-top pad-lrg-bottom" style="font-size:18px;">Want to start using Shnack?<br>Get in contact</a>
 
-    <a href="#top" class="place-order">Return to top  |  Place an order</a>
-    <p>Follow us on Facebook.</p>
-    <p>You might see us at a game.</p>
-    </br>
-  	<div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-  </footer>
+	    <a href="#top" class="place-order">Return to top  |  Place an order</a>
+	    <p>Follow us on Facebook.</p>
+	    <p>You might see us at a game.</p>
+	    </br>
+	  	<div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	  </footer>
 
-	</body>
+  </div>
+
+</body>
 </html>
