--- a/app/views/shared/_order_details.html.erb
+++ b/app/views/shared/_order_details.html.erb
@@ -44,12 +44,27 @@
 					<td> <%= Order.integer_to_currency(@order.total) %> </td>
 				</tr>
 			<% else %>
-				<tr>
-					<td>Total</td>
-					<td></td>
-					<td></td>
-					<td> <%= Order.integer_to_currency(@order.total) %> </td>
-				</tr>
+				<% if user_signed_in? && current_user.account_credit > 0 %> 
+					<tr id="shnack-credit">
+						<td> Shnack Credit </td>
+						<td></td>
+						<td></td>
+						<td> <%= current_user.account_credit < @order.total ? Order.integer_to_currency(current_user.account_credit) : Order.integer_to_currency(@order.total)  %> </td>
+					</tr>
+					<tr>
+						<td> Total </td>
+						<td></td>
+						<td></td>
+						<td id="order-total" data-fullprice="<%=Order.integer_to_currency @order.total %>" data-creditprice="<%= current_user.account_credit < @order.total ? Order.integer_to_currency(@order.total - current_user.account_credit) : Order.integer_to_currency(0 )  %>"> <%= current_user.account_credit < @order.total ? Order.integer_to_currency(@order.total - current_user.account_credit) : Order.integer_to_currency(0 )  %> </td>
+					</tr>						
+				<% else %>
+					<tr>
+						<td>Total</td>
+						<td></td>
+						<td></td>
+						<td> <%= Order.integer_to_currency(@order.total) %> </td>
+					</tr>
+				<% end %>
 			<% end %> 	
 		</tfoot>
 	</table>
