limited time offer yo

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,13 @@ Sign Up
 <% end %>
 
 
+
 <div class="input-list center" style="max-width:350px;">
+
+  <div class="sign-up-page-deal">
+    <h4 class="SSS bold">Limited time offer</h4>
+    <p>Sign up today and get $5 in Shnack Credit</p>
+  </div>
 
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
