--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,5 +1,31 @@
 @import "base/mixins", "base/vars";
 
+.sign-up-page-deal {
+  h4 {
+    background-color: $green;
+    color: $white;
+    padding: 5px;
+    margin-bottom: 0 !important;
+  }
+  p {
+    border-left: 2px dotted $green;
+    border-right: 2px dotted $green;
+    border-bottom: 2px dotted $green;
+  }
+
+  display: block;
+  position: absolute;
+  left: -210px;
+  top: 50px;
+  font-size: .8em;
+  width: 150px;
+  text-align: center;
+
+  @media (max-width: 780px) {
+    display: none;
+  }
+}
+
 .easy-123 {
   .column-mobile {
     text-align: center;
