--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -1,68 +1,16 @@
-a {
-  font: normal 16px/100% "Dosis", Tahoma, sans-serif;
-  text-decoration: none;
-  font-weight: 500;
-  color: #01A;
-
-  &:visited {
-    color: #01A;
-  }
-
-  &:hover {
-    color: khaki;
-  }
+ .btnp {
+  padding: 9px 15px;
+  background: #336699;
+  font-size: 14px;
+  color: #FFFFFF;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
 }
 
-button {
-  font: normal 16px/100% "Dosis", Tahoma, sans-serif;
-  font-weight: 500;
-  outline-color: transparent;
-  border-color: transparent;
-
-  &:active, &.visited {
-    outline-color: transparent;
-    border-color: transparent;
-  }
-
-  &[disabled=disabled] {
-    background-color: #999;
-    color: white;
-    &:before {
-      font-family: "Damion";
-      content: "X ";
-      font-size: 1.5em;
-    }
-  }
-
-
-/*   &.btn {
-    border-radius: 0px;
-  }
- */
-/*   &.btn.payment-button {
-      margin-top:20px;
-  } */
- 
-
-}
-
-/* override for rail helpers that are not button tags but are buttons */
-input[type=submit],
-input[type=button] {
-  outline-color: transparent;
-  border-color: transparent;
-
-  &:active, &.visited {
-    outline-color: transparent;
-    border-color: transparent;
-  }
-}
-
-/* used for top bar TODO */
 a.user {
   color: white;
   font-weight: bold;
-  font-size: 1.1em;
+  font-size: 1em;
   padding: 5px;
   //margin: 0px;
   height: 100%;
@@ -84,3 +32,56 @@ a .shnack {
 }
 
 
+
+a {
+  font: normal 16px/100% "Dosis", Tahoma, sans-serif;
+  text-decoration: none;
+  font-weight: 500;
+  color: #01A;
+
+  &:visited {
+    color: #01A;
+  }
+
+  &:hover {
+    color: khaki;
+  }
+}
+
+
+
+button {
+  font: normal 16px/100% "Dosis", Tahoma, sans-serif;
+  font-weight: 500;
+  outline-color: transparent;
+  border-color: transparent;
+
+  &:active, &.visited {
+    outline-color: transparent;
+    border-color: transparent;
+  }
+
+
+  &.btn {
+
+
+    border-radius: 0px;
+    width:100%;
+
+  }
+
+  &.btn.payment-button {
+      margin-top:20px;
+  }
+
+  &[disabled=disabled] {
+    background-color: #999;
+    color: white;
+    &:before {
+      font-family: "Damion";
+      content: "X ";
+      font-size: 1.5em;
+    }
+  }
+
+}
