--- a/app/assets/stylesheets/components/_alerts.scss
+++ b/app/assets/stylesheets/components/_alerts.scss
@@ -23,21 +23,12 @@
 }
 
 
-input.error {
-  border: 2px solid #780000;
-  background-color: #E5E6E6;
+.error {
+  margin-top:10px;
+  padding:3px;
+  border: 1px solid #780000;
+  border-radius:10px;
+  background-color:#F5E6E6;
+  font-family: "Poiret One", Geneva, sans-serif;
   color:#780000;
-  font-weight: bold;
-}
-
-div.error {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 5px;
-  border: 2px solid #780000;
-  border-radius: 10px;
-  background-color: #E5E6E6;
-  color:#780000;
-  font-weight: bold;
-  text-align: center;
 }
