--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -1,7 +1,4 @@
-/* I BELIEVE THIS IS ALL UNUSED NOW BN 8.6.14
-instead use input-list and push-btn */
-
-input.sign_in, textarea.sign_in {
+input, textarea {
 	padding: 9px;
 	border: solid 1px #E5E5E5;
 	outline: 0;
