--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   top:0;
-  max-width: 880px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 0px 30px;
