--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 					</li>
 				</ul>
 			<%else%>
-				<div class="user-settings my-gear">
+				<div class="user-settings links">
 					<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
 					<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
 				</div> 
