--- a/app/assets/stylesheets/components/buttons.css.scss
+++ b/app/assets/stylesheets/components/buttons.css.scss
@@ -23,9 +23,32 @@
   border-radius: 3px;
   top: 0px;
   box-shadow: 0 3px 0 #333;
+  margin-right: 3px;
+  margin-left: 3px;
+  width: calc(100% - 6px);
+
 
   &:hover {
-    top: 2px;
-    box-shadow: 0 1px 0 #333;
+    top: 1px;
+    box-shadow: 0 2px 0 #333;
   }
+
+  &:active {
+    top: 3px;
+    box-shadow: none;
+  }
+}
+
+/* used for the menu flow 
+.next-step {
+  //min-width: 50%;
+  float: right;
+  margin-right: 10px;
+}*/
+
+/* manage vendors add items page */
+.add-mod-btns > .action-btn {
+  display: block;
+  width: 100%;
+  margin-bottom: 5px;
 }
