--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -4,37 +4,29 @@
   position: fixed;
   z-index: index($elements, topbar);
   left: 0;
+  right: 0;
   top:0;
-  max-width: 100%;
-  width: 100%;
-  margin-left: 0;
-  margin-right: 0;
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0px 30px;
   color: $white;
   background: $red;
-  border-bottom: 1px solid #333333;
-  /*@include box-shadow(0, 0, 3px, #dddddd);*/
-
-  .topbar-container {
-    max-width: 900px;
-    margin: 0 auto;
-    position: relative;
-  }
+  display: block;
+  @include box-shadow(0, 0, 6px, $black);
 
   a {
-    color:white;
+    color: $white;
 
     h3 {
       font-size: 2.5em;
       width: 25%;   //NOTE
     }
     &:visited {
-      color: white;
+      color: $white;
     }
   }
 }
-
-
 /* because the topbar always takes space fixed
   on top, removed from the regular flow */
 .topbar + div {
@@ -64,17 +56,9 @@ padding-top: 5px;
   }
 
 
-.links {
-  position: absolute;
-  right: 0px;
-  top: 9px;
-}
-
 .my-gear {
   position: absolute;
-  right: 0px;
-  top: 2px;
+  right: 0;
+  top: 0;
 }
-
-
 
