--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,7 +119,7 @@ tbody.all_the_mods tr {
 }
 
 .list-group {
-  /*box-shadow: 0px 0px 5px #888;*/
+  box-shadow: 0px 0px 5px #888;
 }
 
 div.list-group.select .list-group-item  {
