--- a/app/assets/stylesheets/base/_inputs.scss
+++ b/app/assets/stylesheets/base/_inputs.scss
@@ -1,4 +1,52 @@
+.input-list {
+  h1, h2, h3, h4, h5, h6 { margin-bottom: 4px; }
 
+  label { 
+    color: #555; 
+    display: block; 
+  }
+
+  select,
+  input[type=text],
+  input[type=email],
+  input[type=password],
+  input[type=tel],
+  textarea {
+    padding: 8px;
+    margin: 0px 3px 8px 3px;
+    //border-top: none;
+    //border-left: none;
+    //border-right: none;
+    border: solid 1px #C5C5C5;
+    border-radius: 2px;
+    width: calc(100% - 6px);
+
+    &:hover { 
+      border-color: #A9A9A9;
+      box-shadow: 0 0 5px #A9A9A9;
+    } 
+
+    &:focus {
+      border-color: #A9A9A9;
+      box-shadow: 0 0 5px #A9A9A9;
+    }
+
+    &.with-info {
+      width: calc(100% - 50px);
+    }
+  }
+
+  label input[type=checkbox],
+  label input[type=radio] {
+    display: inline-block;
+    //vertical-align: middle;
+    margin-left: 2px;
+    margin-bottom: 8px;
+  }
+}
+
+
+/* old code */
 input[type="radio"].modifier, input[type="checkbox"].modifier {
   opacity: 0;
   position:absolute;
