--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,43 +32,45 @@
 
 	<div class="wrapper" id="top">
 		<div id="topbar" class="row-new topbar clear-fix">
-			<a href="/"><h3 class="column two">Shnack</h3></a>
+			<div class="topbar-container">
+
+				<a href="/"><h3 class="column two">Shnack</h3></a>
 
 
-			<div class="prgs-bar column-mobile eight">
-				<div class="title_current_step">
-					<%= yield :page_title %>
+				<div class="prgs-bar column-mobile eight">
+					<div class="title_current_step">
+						<%= yield :page_title %>
+					</div>
 				</div>
-			</div>
 
 
-			<% if user_signed_in? %>
-				<ul id="click_me" class="column one my-gear">
-					
-					<li>
-						<a href="#" class="opac-fix"><%= image_tag("gear-small-w.png", alt: "settings", style: "opacity:0.8;") %></a> 
+				<% if user_signed_in? %>
+					<ul id="click_me" class="column one my-gear">
 						
-						<ul>
-								<li class="shnack-credit">Account Credit: <%= Order.integer_to_currency current_user.account_credit %> </li>
+						<li>
+							<a href="#" class="opac-fix"><%= image_tag("gear-small-w.png", alt: "settings", style: "opacity:0.8;") %></a> 
 							
-							<% if current_user.is_manager?  %>
-								<li><%= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %></li>
-							<%end%>
-							<% if current_user.is_super? %>
-								<li> <%= link_to "Super User", :controller => "/super", :action => "manage_as_super" %></li>
-							<% end %>
-							<li><%= link_to "Change your password", edit_user_registration_path %></li>
-							<li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
-						</ul>
-					</li>
-				</ul>
-			<%else%>
-				<div class="user-settings my-gear">
-					<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
-					<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
-				</div> 
-			<%end%>
-
+							<ul>
+									<li class="shnack-credit">Account Credit: <%= Order.integer_to_currency current_user.account_credit %> </li>
+								
+								<% if current_user.is_manager?  %>
+									<li><%= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %></li>
+								<%end%>
+								<% if current_user.is_super? %>
+									<li> <%= link_to "Super User", :controller => "/super", :action => "manage_as_super" %></li>
+								<% end %>
+								<li><%= link_to "Change your password", edit_user_registration_path %></li>
+								<li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+							</ul>
+						</li>
+					</ul>
+				<%else%>
+					<div class="user-settings my-gear">
+						<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
+						<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
+					</div> 
+				<%end%>
+			</div>
 		</div> <!--ENDS TOPBAR-->
 
 		<% if flash[:notice] %>
