added a few things

--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -63,10 +63,15 @@ padding-top: 5px;
     }
   }
 
+.links {
+    position: absolute;
+  right: 0;
+  top: 9px;
+}
 
 .my-gear {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 2px;
 }
 
