--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 						</li>
 					</ul>
 				<%else%>
-					<div class="user-settings my-gear">
+					<div class="user-settings links">
 						<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
 						<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
 					</div> 
@@ -98,18 +98,21 @@
 
 		<section class="wrapper-darkslategray">
 			<div class="row-new pad-y-sml easy-123">
+				<div class="column-mobile twelve" style="width:100%;">
+					<h3 style="font-size: 4em;">How it works</h3>
+				</div>
 				<div class="column-mobile four">
-					<h1>Select your Location</h1>
+					<h1>1. Select your Location</h1>
 					<span class="i-location i-easy-123"></span>
 					<p>Order food from your current spot on your phone or laptop</p>
 				</div>
 				<div class="column-mobile four">
-					<h1>Order & Pay</h1>
+					<h1>2. Order & Pay</h1>
 					<span class="i-pay i-easy-123"></span>
 					<p>Pay in app and be noitified via text when your food is ready</p>
 				</div>
 				<div class="column-mobile four">
-					<h1>Relax until Pick Up</h1>
+					<h1>3. Relax until Pick Up</h1>
 					<span class="i-pickup i-easy-123"></span>
 					<p>Sit back, skip the line, & pickup your food</p>
 				</div>
