--- a/app/assets/stylesheets/modules/_topbar.scss
+++ b/app/assets/stylesheets/modules/_topbar.scss
@@ -11,7 +11,7 @@
   margin-right: 0;
   padding: 0px 30px;
   color: $white;
-  background: $red;
+  background: darkred;
   border-bottom: 1px solid #333333;
   /*@include box-shadow(0, 0, 3px, #dddddd);*/
 
@@ -33,6 +33,7 @@
     }
   }
 }
+
 
 
 /* because the topbar always takes space fixed
