--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,8 +103,18 @@
 				
 	</div>
 
-	<section class="wrapper-darkslategray">
+
+	<section class="wrapper" style=" background-color: darkseagreen; padding: 10px; color:white;">
+			<div class="row-new" >
+			<div class="column-mobile twelve" style="text-align:center;">
+				<h3>How It Works</h3>
+			</div>
+		</div>
+	</section>
+	<section class="wrapper" >
+	
 		<div class="row-new pad-y-sml easy-123">
+			
 			<div class="column-mobile four">
 				<h2>1. Select your location</h2>
 				<span class="i-location"></span>
@@ -143,20 +153,15 @@
 		</div>
 	</div>
  -->
-	<footer class="tell-me-more">
-		<%= link_to('This is all about the Shnack', { :controller => "/application", :action => "howdy"}) %>
+	<footer>
+			<div class="container">
+					
+				<a href="/howdy" class="learn-more"> Want to become a part of the Shnack Community? Learn More </a>
+					<a href="#top" class="place-order">Return to top</a>
+
+
+			</div>
 	</footer>
-
-	<footer class="fb">
-
-	  <a href="/howdy" class="place-order pad-top pad-lrg-bottom" style="font-size:18px;">Want to start using Shnack?<br>Get in contact</a>
-
-    <a href="#top" class="place-order">Return to top  |  Place an order</a>
-    <p>Follow us on Facebook.</p>
-    <p>You might see us at a game.</p>
-    </br>
-  	<div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-  </footer>
 
 	</body>
 </html>
